--- a/.env
+++ b/.env
@@ -1,9 +1,1 @@
-ORG_NAME=fwzzy
-
-BE_BUILD_VERSION=0.0.1
-FE_BUILD_VERSION=0.0.1
-
-DB_DATABASE_NAME=mrnn-db
-DB_USERNAME=fwzzy
-DB_PASSWORD=123456
-DB_ROOT_PASSWORD=123456
+COMPOSE_FILE=docker-compose.yml:./service-auth/docker-compose.yml
